# TemplateOpenGL

./: CMakeLists.txt  README.md  dependency.sh  main.cpp
imgui/: imgui.cpp
include/: ApplicationData.hpp  OBJ_Loader.hpp  Vertex.h  math.hpp
menu/: menu.cpp  menu.hpp
primitives/: rectangle.h  triangle.h
shaders/: fs.glsl  vs.glsl
src/: BuffersCollection.hpp  Camera.cpp  Camera.hpp  GeometryKeeper.cpp  GeometryKeeper.h  KeysControls.cpp  KeysControls.hpp  Object3D.hpp  Shader.h  Texture.cpp  Texture.hpp  TextureParameters.hpp  Window.cpp  Window.hpp  WindowSettings.hpp  mouseHandler.cpp  mouseHandler.hpp
